# tw-dl

./: .env.example  .gitignore  Cargo.toml  ISSUES.md  LICENSE  README.md  tasks.yaml
.github/workflows/: ci.yml  release.yml
.mk/vault/local/agents/: data.asc
.mk/vault/local/tg-set/: data.asc
scripts/: release.sh
src/: auth.rs  config.rs  doctor.rs  download.rs  lib.rs  link.rs  main.rs  manifest.rs  output.rs  session.rs
src/download/: batch.rs  client.rs  describe.rs  mod.rs  resolver.rs  retry.rs  transfer.rs  types.rs
tests/: cli.rs
